[EFL] Range input ignores padding https://bugs.webkit.org/show_bug.cgi?id=94595

Patch by Thiago Marcos P. Santos <thiago.santos@intel.com> on 2012-08-28
Reviewed by Kenneth Rohde Christiansen.

Source/WebCore:

We do not constrain the slider size anymore since it was ignoring the
padding. Also paint the slider thumb on the step it was suppose
to be painted. WebKit will now take care of the positioning of the
thumb, the behavior will be now more coherent with other ports.

As side effect, this patch also fixes setting a slider RTL that wasn't
working before and can be verified by the existing tests. Also
datalist will stop at tick marks.

No new tests, rebaselined the existing ones and unskipping failures.

* platform/efl/RenderThemeEfl.cpp:
(WebCore):
(WebCore::RenderThemeEfl::paintThemePart):
(WebCore::RenderThemeEfl::edjeGroupFromFormType):
(WebCore::RenderThemeEfl::adjustSliderTrackStyle):
(WebCore::RenderThemeEfl::adjustSliderThumbStyle):
(WebCore::RenderThemeEfl::adjustSliderThumbSize):
(WebCore::RenderThemeEfl::paintSliderThumb):
* platform/efl/RenderThemeEfl.h:

Source/WebKit/efl:

Updated default theme to paint the slider thumb in a different step.
This was done by splitting the thumb into a separated group.

* DefaultTheme/widget/slider/slider.edc:

LayoutTests:

Updated test expectations. We now report the correct thumb size and
respect the defined padding. Two tests were skipped because they
assume a certain thumb size and hit tests fails because of that.

* platform/efl/TestExpectations:
* platform/efl/fast/dom/HTMLInputElement/input-slider-update-expected.txt:
* platform/efl/fast/forms/box-shadow-override-expected.png:
* platform/efl/fast/forms/box-shadow-override-expected.txt:
* platform/efl/fast/forms/datalist/range-snap-to-datalist-expected.txt:
* platform/efl/fast/forms/input-appearance-height-expected.png:
* platform/efl/fast/forms/input-appearance-height-expected.txt:
* platform/efl/fast/forms/range/input-appearance-range-expected.png:
* platform/efl/fast/forms/range/input-appearance-range-expected.txt:
* platform/efl/fast/forms/range/slider-mouse-events-expected.txt: Added.
* platform/efl/fast/forms/range/slider-padding-expected.png:
* platform/efl/fast/forms/range/slider-padding-expected.txt:
* platform/efl/fast/forms/range/slider-thumb-shared-style-expected.png:
* platform/efl/fast/forms/range/slider-thumb-shared-style-expected.txt:
* platform/efl/fast/layers/video-layer-expected.png:
* platform/efl/fast/layers/video-layer-expected.txt:
* platform/efl/fast/repaint/slider-thumb-drag-release-expected.txt:
* platform/efl/media/audio-controls-rendering-expected.png:
* platform/efl/media/audio-controls-rendering-expected.txt:
* platform/efl/media/audio-repaint-expected.txt:
* platform/efl/media/controls-styling-strict-expected.png:
* platform/efl/media/controls-styling-strict-expected.txt:
* platform/efl/media/track/track-cue-rendering-horizontal-expected.png:
* platform/efl/media/track/track-cue-rendering-horizontal-expected.txt:
* platform/efl/media/track/track-cue-rendering-vertical-expected.png:
* platform/efl/media/track/track-cue-rendering-vertical-expected.txt:

Canonical link: https://commits.webkit.org/113041@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126864 268f45cc-cd09-0410-ab3c-d52691b4dbfc